<resources>
    <string name="app_name">picReview</string>
    <string name="action_settings">Settings</string>

    <!-- Main Menu -->
    <string name="button_review">Review</string>
    <string name="button_search">Search</string>
    <string name="button_my_reviews_text">My Reviews</string>
    <string name="button_logout">Logout</string>
    <!-- Main Menu -->

    <!-- Search -->
    <string name="hint_search">(i.e. name, related tags…)</string>
    <!-- Search -->

    <!-- Confirm Pic -->
    <string name="button_confirm">Yes!</string>
    <string name="button_deny">No!</string>
    <string name="display_confirmation">Does this look right?</string>

    <string name="button_back">Back</string>
    <string name="button_forward">Forward</string>

    <string name="edit_caption">Describe your picture...</string>

    <string name="button_my_location">Use Your Location?</string>
    <string name="button_search_location">Search for Locations Nearby?</string>
    <string name="button_no_location">No Location?</string>

    <string name="button_like">Like</string>
    <string name="button_dislike">Dislike</string>

    <string name="display_pic_review_confirmation">Is that everything?</string>
    <string name="edit_tags">i.e. #diner #pizza #etc...</string>

    <!-- Confirm Pic -->
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="submit_button_text">Submit</string>

    <!-- Error messages -->
    <string name="no_username">No username entered</string>
    <string name="short_username">Username must be more than 4 characters long and less than 26 characters</string>
    <string name="no_password">No password entered</string>
    <string name="short_password">Password must be more than 4 characters long and less than 26 characters</string>
    <string name="no_pass_match">Passwords must match</string>
    <string name="no_confirm_pass">Please confirm your password</string>
    <string name="pass_username_match">Username and Password cannot be the same.</string>
    <string name="title_activity_maps">Map</string>

    <!-- Fragment names to pass in order to start. -->
    <string name="toStartLoginFragment">LoginFragment</string>
    <string name="toStartRegisterFragment">RegisterFragment</string>

    <string name="DBSuccessMessage">Success</string>

    <!-- Preference names. -->
    <string name="PREF_SESSION">group1.tcss450.edu.picreview.SESSION</string>
    <string name="PREF_USERNAME">group1.tcss450.edu.picreview.USERNAME</string>

    <!-- Description -->
    <string name="caption_description">Add a caption to describe your picture</string>
    <string name="tag_description">Add a tag to make your picture easy to find</string>
    <string name="location_picker_description">Add a location so other users know where you capture the image</string>
</resources>
