<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group1.tcss450.uw.edu.picreview.login_register_service.RegisterFragment">

    <Button
        android:id="@+id/register_submit_button"
        android:layout_width="155dp"
        android:layout_height="55dp"
        android:layout_marginRight="32dp"
        android:text="@string/submit_button_text"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="34dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/register_confirm_password_box" />

    <EditText
        android:id="@+id/register_username_box"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_password_box"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_username_box" />

    <EditText
        android:id="@+id/register_confirm_password_box"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-1dp"
        android:ems="10"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password_box" />

</android.support.constraint.ConstraintLayout>
