<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group1.tcss450.uw.edu.picreview.login_register_service.LoginFragment">

    <Button
        android:id="@+id/login_submit_button"
        android:layout_width="155dp"
        android:layout_height="55dp"
        android:text="@string/submit_button_text"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/login_password_box"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/login_username_box"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_password_box"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143" />

</android.support.constraint.ConstraintLayout>
