<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group1.tcss450.uw.edu.picreview.review_service.ConfirmPicFragment">

    <Button
        android:id="@+id/bReviewDeny"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/button_deny"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/bReviewConfirm"
        app:layout_constraintVertical_bias="0.07999998"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tConfirmation" />

    <Button
        android:id="@+id/bReviewConfirm"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:text="@string/button_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.678"
        app:layout_constraintLeft_toRightOf="@+id/bReviewDeny"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tConfirmation"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="0.084"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/tConfirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_confirmation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/testImageView" />

    <ImageView
        android:id="@+id/testImageView"
        android:layout_width="300dp"
        android:layout_height="301dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@color/noImage"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
